force-app/main/default/objects/cgcloud__User_Document__c/cgcloud__User_Document__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the daily report object.</description>
    <label>Daily Report</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Daily Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>