force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Accountable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accountable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>