force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Annotation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Annotation__c</fullName>
    <label>Annotation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>