force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>