force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>