force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Responsible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Documents2</relationshipName>
    <type>Lookup</type>
</CustomField>