force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Description__c</fullName>
    <formula>cgcloud__User_Document_Template__r.cgcloud__Description__c</formula>
    <label>Template Description</label>
    <type>Text</type>
</CustomField>