force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Total_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Duration_Min__c</fullName>
    <label>Total Activity Duration (Min)</label>
    <summarizedField>cgcloud__User_Document_Activity__c.cgcloud__Duration__c</summarizedField>
    <summaryForeignKey>cgcloud__User_Document_Activity__c.cgcloud__User_Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>