force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Total_Working_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Working_Duration_Min__c</fullName>
    <description>Difference between Work Time From and Work Time Thru</description>
    <formula>(VALUE(LEFT(cgcloud__Work_Time_Thru__c, 2)) * 60 + VALUE(RIGHT(cgcloud__Work_Time_Thru__c, 2))) - (VALUE(LEFT(cgcloud__Work_Time_From__c, 2)) * 60 + VALUE(RIGHT(cgcloud__Work_Time_From__c, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Working Duration (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>