force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__User_Document_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Report Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__User_Document_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__User_Document_Template__c</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>