force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Work_Time_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Work_Time_Thru__c</fullName>
    <defaultValue>&quot;00:00&quot;</defaultValue>
    <label>Work Time Thru</label>
    <length>5</length>
    <type>Text</type>
</CustomField>