force-app/main/default/objects/cgcloud__User_Document__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <formula>cgcloud__User_Document_Template__r.cgcloud__Workflow__r.Name</formula>
    <label>Workflow</label>
    <type>Text</type>
</CustomField>