force-app/main/default/objects/cgcloud__User_Document__c/validationRules/cgcloud__Check_Postdate.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Postdate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(cgcloud__User_Document_Template__r.cgcloud__Allow_Postdating__c) &amp;&amp; cgcloud__Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Daily Reports aren&apos;t allowed for future dates.</errorMessage>
</ValidationRule>