force-app/main/default/objects/cgcloud__User_Document__c/validationRules/cgcloud__Time_of_Day_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Time_of_Day_Format_Validation</fullName>
    <active>true</active>
    <description>Please enter the correct format for Time of Day (hh:mm).</description>
    <errorConditionFormula>AND(
            OR(
            NOT(ISBLANK(cgcloud__Work_Time_From__c)),
            NOT(ISBLANK(cgcloud__Work_Time_Thru__c))
            ),
            OR(
            NOT(REGEX(cgcloud__Work_Time_From__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)),
            NOT(REGEX(cgcloud__Work_Time_Thru__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;))
            )
            )</errorConditionFormula>
    <errorMessage>Please enter the correct format for Time of Day (hh:mm).</errorMessage>
</ValidationRule>