force-app/main/default/objects/cgcloud__User_Document__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__User_Document_Template__c</columns>
    <columns>cgcloud__Template_Description__c</columns>
    <columns>cgcloud__Date__c</columns>
    <columns>cgcloud__Responsible__c</columns>
    <columns>cgcloud__Phase__c</columns>
    <columns>cgcloud__Accountable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>